forth/test/fail/test_cont_meta_switch_case_missing_pred.af
fun: cont_meta_switch_case_missing_pred_fail { key -- out }
  key switch
    case 100 end
    200
  end
end
